# serde-flow

./: Cargo.toml  README.md
.github/workflows/: ci.yml
serde_flow/: Cargo.toml  README.md
serde_flow/src/: error.rs  lib.rs
serde_flow/src/encoder/: bincode.rs  json.rs  mod.rs  rkyv.rs  zerocopy.rs
serde_flow/src/flow/: mod.rs  zerocopy.rs
serde_flow_derive/: Cargo.toml  README.md
serde_flow_derive/src/: lib.rs
test_suite/: Cargo.toml
test_suite/benches/: comparison.rs  decoding.rs
test_suite/src/: async_migration.rs  basic_migration.rs  bytes_migration.rs  json_migration.rs  lib.rs  unordered_fields.rs  zerocopy_basic.rs  zerocopy_basic_migration.rs
