[workspace]
members = [
    "serde_flow",
    "serde_flow_derive",
    "test_suite"
]

[patch.crates-io]
serde_flow = { path = "serde_flow" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.74", default-features = false }
quote = { version = "1.0.35", default-features = false }
syn = { version = "2.0.46", default-features = false }
