[package]
name = "serde_flow"
version = "1.0.0"
edition = "2021"
authors = ["Ivan Ermolaev <ermolaevym@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Helps to migrate serde objects"
homepage = "https://github.com/versolid/serde-flow"
repository = "https://github.com/versolid/serde-flow"
documentation = "https://docs.rs/serde-flow"
keywords = ["serde", "migration"]
categories = ["encoding", "network-programming"]

[lib]
name = "serde_flow"

[dependencies]
serde_flow_derive = { version = "1.0.0", path = "../serde_flow_derive" }
futures-util = "0.3.30"
tokio = { version = "1.36.0", optional = true }
async-std = { version = "1.12.0", optional = true }
serde = { version = "1.0.197", optional = true }
bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.114", optional = true }
rkyv = { version = "0.7.44", optional = true }
thiserror = "1.0.57"

[dev-dependencies]
serde_flow_derive = { version = "1.0.0", path = "../serde_flow_derive" }

[features]
default = ["tokio-fs", "bincode", "zerocopy"]
tokio-fs = ["dep:tokio", "tokio/fs", "serde_flow_derive/tokio"]
async-std-fs = ["dep:async-std", "serde_flow_derive/async-std"]
bincode = ["serde", "dep:bincode"]
json = ["serde", "dep:serde_json"]
serde = ["dep:serde", "serde/derive"]
zerocopy = ["dep:rkyv", "rkyv/validation"]
