[package]
name = "serde_flow_derive"
version = "1.1.0"
edition = "2021"
authors = ["Ivan Ermolaev <ermolaevym@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Simplifying migration for serde and zero-copy entities"
homepage = "https://github.com/versolid/serde-flow"
repository = "https://github.com/versolid/serde-flow"
documentation = "https://docs.rs/serde-flow"
keywords = ["flow", "serde", "serialization", "migration"]
categories = ["encoding", "network-programming"]

[lib]
name = "serde_flow_derive"
proc-macro = true

[dependencies]
serde = { version = "1.0.197", features = ["derive"]}
proc-macro2 = "1.0.78"
syn = "2.0.52"
quote = "1.0.35"

[features]
default = []
tokio = []
async-std = []
